# opengl-cmake-starter-project

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
shader/: fragment_shader.glsl  vertex_shader.glsl
src/: Application.cpp  Application.hpp  MyApplication.cpp  MyApplication.hpp  Shader.cpp  Shader.hpp  asset.hpp.in  glError.cpp  glError.hpp  main.cpp
